# CareerNavigator

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION_CONFIG.md  QUICKSTART.md  README.md  README_WEB.md  REFACTORING_GUIDE.md  Recommendation_Algorithms_Explanation.pptx  SEM_IMPLEMENTATION_ANALYSIS.md  SEM_INVESTIGATION_SUMMARY.md  SEM_PROFESSIONAL_CRITIQUE.md  TESTING_QUICKSTART.md  TEST_DESIGN.md  convert_data.py  coverage.json  coverage_middleware.txt  coverage_report.txt  create_slides.py  ego_network.html  ego_network_dashboard_0.html  ego_network_dashboard_1.html  final_coverage.txt  netlify.toml  pyproject.toml  requirements.txt  run_recommendation.py  sem_code_examples.py  streamlit_app.py  test_constraints_api.py  test_hierarchical_bayesian_integration.py  test_phase1_implementation.py  test_sem_simple.py  uv_installation_guide.md  verify_lingam.py  verify_refactor.py
.claude/: claude.md  settings.local.json
.streamlit/: config.toml
backend/: main.py  requirements.txt
data/: acquiredCompetenceLevel.csv  competence_category_skillnote.csv  education_skillnote.csv  license_skillnote.csv  member_skillnote.csv  skill_skillnote.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  CAREER_PATH_SEM_MODEL.md  CAUSAL_RECOMMENDATION_AUTO_OPTIMIZATION.md  CAUSAL_RECOMMENDATION_THREE_STAGES.md  CODE_STRUCTURE.md  EVALUATION.md  HYBRID_RECOMMENDATION_SYSTEM.md  ML_PRESENTATION_SALES.md  ML_TECHNICAL_DETAILS.md  MODELS_TECHNICAL_GUIDE.md  NEW_SEM_FEATURES.md  NMF_RECONSTRUCTION_ERROR_IMPROVEMENTS.md  PERSISTENCE.md  PERSISTENCE_QUICKSTART.md  QUICKSTART.md  README.md  REFACTORING_2025.md  REFACTORING_GUIDE.md  SEM_CODE_REVIEW.md  SEM_IMPLEMENTATION_SUMMARY.md  SEM_INTEGRATION_GUIDE.md  SEM_MODEL_GUIDE.md  SEM_SCALABILITY_ANALYSIS.md  STREAMLIT_CLOUD_SETUP.md  STREAMLIT_GUIDE.md  TESTING_QUICKSTART.md  TEST_DESIGN.md  WEBUI_GUIDE.md  WEBUI_INTRODUCTION_FOR_TEAM.md  data_model_specification.md
examples/: 01_basic_logging.py  02_error_handling.py  03_config_management.py  04_data_validation.py
frontend/: .env.example  .env.production  index.html  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  wrangler.jsonc
pages/: 10_Employee_Career_Dashboard.py  10_Recommendation_Diagnostics.py  1_Causal_Recommendation.py  1_Data_Quality.py  1_Model_Training.py  1_モデル学習.py  2_Employee_Career_Dashboard.py  2_Inference.py  2_Model_Training.py  3_Advanced_SEM_Analysis.py  3_History.py  3_Model_Comparison.py  3_Organizational_Skill_Map.py  3_SEM_Analysis.py  4_Inference.py  4_SEM_Analysis.py  4_Skill_Dependencies.py  4_Strategic_Placement.py  5_Data_Quality.py  5_Skill_Dependencies.py  5_🎯_階層的ベイジアン推薦.py  6_Hierarchical_Bayesian_Recommendation.py  6_Model_Comparison.py  6_Model_Evaluation.py  7_SEM_Skill_Recommendation.py  8_Career_Path_Recommendation.py  9_Career_Path_Recommendation.py  (+1 more)
src/: __init__.py  (+7 more)
(+292 files in other folders)
