[project]
name = "skillnote-recommendation"
version = "1.2.1"
description = "スキルノート推薦システム - 技術者向け力量推薦"
authors = [
    {name = "Development Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.50.0",
    "plotly>=6.3.1",
    "networkx>=3.0",
    "node2vec>=0.4.0",
    "gensim>=4.0.0",
    "structlog>=23.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-json-logger>=2.0.0",
    "tenacity>=8.0.0",
    "joblib>=1.3.0",
    "optuna>=3.0.0",
    "lingam>=1.8.0",
    "graphviz>=0.20.0",
    "python-pptx>=0.6.21",
    "python-louvain>=0.16",
    "pgmpy>=0.1.23",
    "pyvis>=0.3.2",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
skillnote-convert = "skillnote_recommendation.scripts.convert_data:main"
skillnote-recommend = "skillnote_recommendation.scripts.run_recommendation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "networkx.*",
    "optuna.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv]
link-mode = "copy"
